--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
         </nav>
     </header>
     <main>
-        <div>
-            <p>Get Better Care For Your <br><span style="color: blue;">Health</span></p>
-            <p>MindfulMeds is the leading private hospital in kenya taking care of over 500,000 patients annualy</p>
-        </div>
+        <section class="first">
+            <div class="container">
+                <div id="mainpart">
+                    <h2>Get Better Care For Your <br><span style="color: blue;">Health</span></h2>
+                    <p>MindfulMeds is the leading private hospital in kenya taking<br> care of over 500,000 patients annualy</p>
+                </div>
+                <div id="firstimage">
+                    <img src="images/doctors.jpg" alt="doctors" style="width: 300px;height: 300px;">
+                </div>
+            </div> 
+        </section>
     </main>
     
 </body>
