--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <a href="#home">HOME</a>
             <a href="#about">ABOUT US</a>
-            <a href="#services">SERVICES</a>
+            <a href="#servicespage">SERVICES</a>
             <a href="#contact">CONTACT</a>
             <a href="loginform.html">LOGIN</a>
             <a href="registerform.html">REGISTER</a>
@@ -58,33 +58,36 @@
             </div>
         </div>
      <!------Services page----------->
-     <div id="services">
-        <div class="cards">
-            <a href="servicesmore.html"><img src="images/radiotherapy.jpeg" alt="radiotherapy"></a>
-            <h5>RADIOTHERAPY</h5>
-        </div>
-        <div class="cards">
-            <a href="mentalhealth.html"><img src="images/mentalhealth.jpeg" alt="mentalhealth"></a>
-            <h5>MENTAL HEALTH</h5>
-        </div>
-        <div class="cards">
-            <a href="chemotherapy.html"><img src="images/chemotherapy.jpeg" alt="chemotherapy"></a>
-            <h5>CHEMOTHERAPY</h5>
-        </div>
-
-        <div class="cards">
-            <a href="radiology.html"><img src="images/radiology.jpeg" alt="radiology"></a>
-            <h5>RADIOLOGY</h5>
-        </div>
-        <div class="cards">
-            <a href="laboratory.html"><img src="images/laboratory.jpeg" alt="laboratory"></a>
-            <h5>LABORATORY</h5>
-        </div>
-        <div class="cards">
-            <a href="surgery.html"><img src="images/surgery.jpeg" alt="surgery"></a>
-            <h5>SURGERY</h5>
-        </div>
-
+     <div id="servicespage">
+        <h3 style="text-align: center;">OUR SERVICES</h3>
+        <div id="services">
+            <div class="cards">
+                <a href="servicesmore.html"><img src="images/radiotherapy.jpeg" alt="radiotherapy"></a>
+                <div class="cardscontent"><h5>RADIOTHERAPY</h5></div>
+            </div>
+            <div class="cards">
+                <a href="mentalhealth.html"><img src="images/mentalhealth.jpeg" alt="mentalhealth"></a>
+                <div class="cardscontent"><h5>MENTAL HEALTH</h5></div>
+            </div>
+            <div class="cards">
+                <a href="chemotherapy.html"><img src="images/chemotherapy.jpeg" alt="chemotherapy"></a>
+                <div class="cardscontent"> <h5>CHEMOTHERAPY</h5></div>
+            </div>
+    
+            <div class="cards">
+                <a href="radiology.html"><img src="images/radiology.jpeg" alt="radiology"></a>
+                <div class="cardscontent"><h5>RADIOLOGY</h5></div>
+            </div>
+            <div class="cards">
+                <a href="laboratory.html"><img src="images/laboratory.jpeg" alt="laboratory"></a>
+                <div class="cardscontent"><h5>LABORATORY</h5></div>
+            </div>
+            <div class="cards">
+                <a href="surgery.html"><img src="images/surgery.jpeg" alt="surgery"></a>
+                <div class="cardscontent"><h5>SURGERY</h5></div>
+            </div>
+    
+         </div>
      </div>
     </main>
     <footer>
